<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:background="#ADADB1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_name"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textColor="#FAF8F8"

         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_name"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#E5F0E7"

        />
    <Spinner
        android:id="@+id/choise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_name"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:backgroundTint="#FDFDFD"
        />
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/sabbir"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:textSize="25sp"
        android:textColor="@color/White"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textSize="20sp"
        android:textColor="@color/Black"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conv"
        android:textSize="25sp"
        android:textColor="@color/White"
        android:textStyle="bold"
        />





</LinearLayout>