<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#BEB0B0"
    android:orientation="vertical"
    tools:context=".Calculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculator"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="#FFF9A9"
        android:inputType="numberDecimal"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editext1"
        android:textSize="20sp"
        android:hint="Enter 1st number"
        android:backgroundTint="#FDFAFA"
        android:inputType="numberDecimal"
        android:layout_marginBottom="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editext2"
        android:textSize="20sp"
        android:hint="Enter 2nd number"
        android:backgroundTint="#FDFAFA"
        android:inputType="numberDecimal"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/Green"
            android:background="@color/White"
            />

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:textColor="@color/Red"
        />
        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/Red"
            android:background="@color/White"
            />
        <Button
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:textColor="@color/Green"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10sp"
        android:hint="Result"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="25sp"
            android:textStyle="bold"

            />
        <Button
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10dp"
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="25sp"
            android:textStyle="bold"

            />

    </LinearLayout>






</LinearLayout>