<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#295466"
    tools:context=".Converter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currency Converter"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="#ECBDF5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Taka:"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20sp"
        android:textColor="#77FD03"
        />
    <EditText
        android:id="@+id/edit1"
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:backgroundTint="#FAF7F7"
        android:textStyle="bold"
        android:hint="Enter amount in Taka"
        android:inputType="numberDecimal"
        android:textColor="@color/Khaki"
        />
    <Button
        android:layout_marginBottom="20sp"
        android:id="@+id/submitButton1"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/submit_name"
        />
    <TextView
        android:layout_marginBottom="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Doller:"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#77FD03"
        />
    <EditText
        android:id="@+id/edit2"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:backgroundTint="#FAF7F7"
        android:textStyle="bold"
        android:hint="Enter amount in Doller"
        android:inputType="numberDecimal"
        android:textColor="@color/Khaki"
        />
    <Button
        android:layout_marginBottom="20sp"
        android:id="@+id/submitButton2"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/submit_name"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/back"
            />
        <Button
            android:layout_marginLeft="20sp"
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/reset"
            />

    </LinearLayout>



</LinearLayout>